# rustcrawler

./: Cargo.toml  README.md  benchmark.html  benchmark_results.json  crawl_results.csv  crawl_results.json  graph.dot  myresults.csv  report.html
dashboard/: graph.js  index.html  main.js  style.css
src/: analytics.rs  benchmark.rs  config.rs  crawler.rs  dashboard.rs  exporter.rs  fetcher.rs  graph.rs  main.rs  models.rs  parser.rs
