[package]
name = "rustcrawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.3.24", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.17"
url = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
petgraph = "0.6"